tests/NormalTests/paczka1/small_fuzzy/21708398.err
Error in line 3: WMFH S979 43,1
Error in line 11: KNh S979 26,8
